--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.63.0",
     "react-snap-carousel": "^0.5.1",
     "sonner": "^2.0.7",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11"
   },
