--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.22",
     "jwt-decode": "^4.0.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.544.0",
