--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-snap-carousel": "^0.5.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
